--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     <!--Шапка сайта-->
     <header>
       <nav class="header-nav">
-        <a class="logo link" href=""> WebStudio </a>
+        <a class="logo link" href="">
+          Web<span class="header-logo">Studio</span></a
+        >
         <ul class="header-list list">
           <li class="header-item">
-            <a class="header-link link" href="./index.html">Студия</a>
+            <a class="header-link link current" href="./index.html">Студия</a>
           </li>
           <li class="header-item">
             <a class="header-link link" href="./portfolio.html">Портфолио</a>
@@ -140,7 +142,9 @@
 
     <!--Футер-->
     <footer class="footer">
-      <a class="logo link" href="">WebStudio</a>
+      <a class="logo link" href=""
+        >Web<span class="footer-logo">Studio</span></a
+      >
       <address class="address">
         <ul class="address-list list">
           <li class="addres-item">
