--- a/portfolio.html
+++ b/portfolio.html
@@ -18,13 +18,17 @@
 
     <header>
       <nav class="header-nav">
-        <a class="logo link" href=""> WebStudio </a>
+        <a class="logo link" href="">
+          Web<span class="header-logo">Studio</span></a
+        >
         <ul class="header-list list">
           <li class="header-item">
             <a class="header-link link" href="./index.html">Студия</a>
           </li>
           <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Портфолио</a>
+            <a class="header-link link current" href="./portfolio.html"
+              >Портфолио</a
+            >
           </li>
           <li class="header-item">
             <a class="header-link link" href="">Контакты</a>
@@ -46,72 +50,74 @@
     </header>
 
     <!--Блок герой-->
+
     <main>
-      <ul>
-        <li class="hero-list list">
-          <button class="hero-button btn" type="button">Все</button>
-        </li>
-        <li class="hero-list list">
-          <button class="hero-button btn" type="button">Веб-сайти</button>
-        </li>
-        <li class="hero-list list">
-          <button class="hero-button btn" type="button">Додатки</button>
-        </li>
-        <li class="hero-list list">
-          <button class="hero-button btn" type="button">Дизайн</button>
-        </li>
-        <li class="hero-list list">
-          <button class="hero-button btn" type="button">Маркетинг</button>
-        </li>
-      </ul>
-
-      <!--ABOUT-->
-
       <section class="about">
+        <h1 class="visually-hidden">About</h1>
+        <ul class="hero-list">
+          <li class="hero-item list">
+            <button class="hero-button btn" type="button">Все</button>
+          </li>
+          <li class="hero-item list">
+            <button class="hero-button btn" type="button">Веб-сайти</button>
+          </li>
+          <li class="hero-item list">
+            <button class="hero-button btn" type="button">Додатки</button>
+          </li>
+          <li class="hero-item list">
+            <button class="hero-button btn" type="button">Дизайн</button>
+          </li>
+          <li class="hero-item list">
+            <button class="hero-button btn" type="button">Маркетинг</button>
+          </li>
+        </ul>
+
+        <!--ABOUT-->
+
         <ul class="about-list list">
           <li class="about-item">
             <img src="./img/img1.jpg" alt="Сайти" width="370" height="294" />
-            <h3 class="about-title">Технокряк</h3>
+            <h2 class="about-title">Технокряк</h2>
             <p class="about-after-title">Веб-сайт</p>
           </li>
           <li class="about-item">
             <img src="./img/img2.jpg" alt="Сайти" width="370" height="294" />
-            <h3 class="about-title">Постер New Orlean vs Golden Star</h3>
+            <h2 class="about-title">Постер New Orlean vs Golden Star</h2>
             <p class="about-after-title">Дизайн</p>
           </li>
           <li class="about-item">
             <img src="./img/img3.jpg" alt="Сайти" width="370" height="294" />
-            <h3 class="about-title">Ресторан Seafood</h3>
+            <h2 class="about-title">Ресторан Seafood</h2>
             <p class="about-after-title">Додаток</p>
           </li>
           <li class="about-item">
             <img src="./img/img4.jpg" alt="Сайти" width="370" height="294" />
-            <h3 class="about-title">Ресторан Seafood</h3>
+            <h2 class="about-title">Ресторан Seafood</h2>
             <p class="about-after-title">Маркетинг</p>
           </li>
           <li class="about-item">
             <img src="./img/img5.jpg" alt="Сайти" width="370" height="294" />
-            <h3 class="about-title">Проєкт Boxes</h3>
+            <h2 class="about-title">Проєкт Boxes</h2>
             <p class="about-after-title">Додаток</p>
           </li>
           <li class="about-item">
             <img src="./img/img6.jpg" alt="Сайти" width="370" height="294" />
-            <h3 class="about-title">Inspiration has no Borders</h3>
+            <h2 class="about-title">Inspiration has no Borders</h2>
             <p class="about-after-title">Веб-сайт</p>
           </li>
           <li class="about-item">
             <img src="./img/img7.jpg" alt="Сайти" width="370" height="294" />
-            <h3 class="about-title">Видання Limited Edition</h3>
+            <h2 class="about-title">Видання Limited Edition</h2>
             <p class="about-after-title">Дизайн</p>
           </li>
           <li class="about-item">
             <img src="./img/img8.jpg" alt="Сайти" width="370" height="294" />
-            <h3 class="about-title">Проект LAB</h3>
+            <h2 class="about-title">Проект LAB</h2>
             <p class="about-after-title">Маркетинг</p>
           </li>
           <li class="about-item">
             <img src="./img/img9.jpg" alt="Сайти" width="370" height="294" />
-            <h3 class="about-title">Growing Business</h3>
+            <h2 class="about-title">Growing Business</h2>
             <p class="about-after-title">Додаток</p>
           </li>
         </ul>
@@ -119,7 +125,9 @@
     </main>
     <!--Футер-->
     <footer class="footer">
-      <a class="logo link" href="">WebStudio</a>
+      <a class="logo link" href=""
+        >Web<span class="footer-logo">Studio</span></a
+      >
       <address class="address">
         <ul class="address-list list">
           <li class="addres-item">
